docs/i18n/zh-Hant/docusaurus-plugin-content-docs/version-1.5/shortcuts.md
---
title: "Shortcuts"
sidebar_position: 2
---


## 鍵盤

There are a few shortcuts that you can use in the editor. Some of them are written below the buttons. Some of them are written below the buttons. Some of them are written below the buttons.

### 一般

* `Ctrl` + `N`: New file
* `Ctrl` + `Shift` + `N`: New file from template
* `Ctrl` + `O`: Open file
* `Ctrl` + `I`: Import file
* `Ctrl` + `E`: Export file
* `Ctrl` + `Shift` + `E`: Export file as image
* `Ctrl` + `Alt` + `E`: Export file as svg
* `Ctrl` + `Alt` + `S`: Open settings

### Project

* `Ctrl` + `Z`: Undo
* `Ctrl` + `Y`: Redo
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Open project settings
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Open color palette dialog
* `Ctrl` + `B`: Open background dialog
* `Ctrl` + `Shift` + `A`: Open areas dialog
* `Ctrl` + `L`: Open layers dialog
* `Ctrl` + `S`: Save
* `Alt` + `S`: Change path
* `Ctrl` + (`1` - `0`): Switch to painter

## Stylus

* `Primary button`: Change to hand tool
* `Secondary button`: Change to second painter

## Configure {#configure}

Customize the controls by giving every control a painter index. The painter index starts at 1 and are ordered from left to right. Customize the controls by giving every control a painter index. The painter index starts at 1 and are ordered from left to right. An empty painter index will disable the painter switch on this control. Insert `0` to enable moving with this control. Insert `0` to enable moving with this control. The painter index starts at 1 and are ordered from left to right. Customize the controls by giving every control a painter index. The painter index starts at 1 and are ordered from left to right. An empty painter index will disable the painter switch on this control. Insert `0` to enable moving with this control. Insert `0` to enable moving with this control.
